--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ td { vertical-align: top; }
    ========================================================================== */
 
 body { 
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 	margin: 0 auto;
 	padding: 0;
 	font: 16px/1.5 'Open Sans', Helvetica, Arial, sans-serif;
